@@ -1,11 +1,11 @@
 Package: ascii
 Type: Package
 Title: Export R objects to several markup languages
-Version: 0.5
+Version: 0.5-2
 Date: 2009-07-20
 Author: David Hajage
 Maintainer: David Hajage <dhajage@gmail.com>
-Description: Coerce R object to asciidoc, txt2tags, restructuredText or org syntax. 
+Description: Coerce R object to asciidoc, txt2tags, restructuredText, org or textile syntax. 
  Package comes with a set of drivers for Sweave.
 License: GPL (>= 2)
 URL: http://eusebe.github.com/ascii/, http://github.com/eusebe/ascii/
