@@ -1,3 +1,8 @@
+2009/xx/xx
+~~~~~~~~~~
+
+* add dimnames in +ascii.table()+
+
 2009/02/05
 ~~~~~~~~~~
 
